# se-scope-target

./: .ccsproject  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  clean-project.sh
3party/jsmn/: CMakeLists.txt
Testing/Temporary/: CTestCostData.txt
ci/: run_test.sh
cmake/: SeScopeConfig.cmake.in  SeScopeConfigVersion.cmake.in  SeScopeSources.cmake  SourceFiles.cmake
cmake/toolchains/: ti-c2000.cmake
cubeide/: .cproject  .mxproject  .project
cubeide/Sources/: SE-Scope.c
doc/: build-ide.md  build-keil  build-nix.md  build-windows.md  cmake-flags.md  command-api.md
examples/dynamic_example/: CMakeLists.txt  main.c
examples/embedded/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_example.txt  NUCLEO_L476_SCOPE.elf.launch  NUCLEO_L476_SCOPE.ioc  README.md  STM32L476RGTx_FLASH.ld  arm-toolchain-windows.cmake  arm-toolchain.cmake  atollic-toolchain.cmake  dev_tool_conf.yaml  embedded.md  nucleo.ioc  scope-workspace.uvmpw
examples/keil/: .gitignore  .mxproject  nucleo.ioc  scope-workspace.uvmpw
examples/static_example/: CMakeLists.txt  main.c
examples/stm32_keil/: dev_tool_conf.yaml  scope-workspace.uvmpw  scope-workspace.uvmpw.uvgui.schuepbs
ide/: scope-lib.uvguix.schuepbs  scope-lib.uvoptx  scope-lib.uvprojx
ide/.jxbrowser-data/: Visited Links  user_prefs.json
ide/Listings/: scope-lib.map
ide/Objects/: ArInp.Scr  addressstorage.crf  addressstorage.d  byteringbuffer.crf  byteringbuffer.d  bytestream.crf  bytestream.d  channel.crf  channel.d  commandaddr.crf  commandaddr.d  commandaddrparser.crf  commandaddrparser.d  commandannounce.crf  commandannounce.d  commandclear.crf  commandclear.d  commandfactory.crf  commandfactory.d  commandpoll.crf  commandpoll.d  commandpollparser.crf  commandpollparser.d  commandrunning.crf  commandrunning.d  commandrunningparser.crf  commandrunningparser.d  commandtinc.crf  commandtinc.d  commandtincparser.crf  commandtincparser.d  commandtrans.crf  commandtrans.d  commandtrigger.crf  commandtrigger.d  commandtriggerparser.crf  commandtriggerparser.d  communicationfactory.crf  communicationfactory.d  ethernetvalidator.crf  (+41 more)
ide/atollic/: .cproject  .project
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/: .gitignore  CMakeLists.txt
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/cmake/: SeLibCSources.cmake
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/container/: ByteRingBuffer.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/definition/: SeLibCTypes.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/logger/: ILogger.h  Logger.h  LoggerBuilder.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/monitoring/: MinCheck.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/stream/: BufferedFloatStream.h  IByteStream.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/util/checkable/: ICheckable.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/util/observer/: IObserver.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/include/se-lib-c/util/runnable/: IRunnable.h
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/src/container/: FloatRingBuffer.c
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/src/logger/: Logger.c  LoggerBuilder.c
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/src/stream/: BufferedByteStream.c  BufferedIntStream.c
ide/ccs/TI-F28069/se-scope-target/ext/se-lib-c/src/util/runnable/: RunnableList.c
ide/debug-f407/: scope-lib-stm32-f407.build_log.htm
ide/debug-g071/: ArInp.Scr  announcestorage.crf  announcestorage.d  bufferedbytestream.crf  bufferedbytestream.d  bufferedfloatstream.crf  bufferedfloatstream.d  bufferedintstream.crf  bufferedintstream.d  byteringbuffer.crf  byteringbuffer.d  channel.crf  channel.d  commandaddr.crf  commandaddr.d  commandaddrparser.crf  commandaddrparser.d  commandannounce.crf  commandannounce.d  commandannounceparser.crf  commandannounceparser.d  commandclear.crf  commandclear.d  commandclearparser.crf  commandclearparser.d  commanddetect.crf  commanddetect.d  commanddetectparser.crf  (+68 more)
libs/Communication/: CMakeLists.txt
libs/Communication/include/Communication/: ComTypes.h  CommunicationCommons.h  CommunicationFactory.h  CommunicationTypes.h  EthernetValidator.h  IPacker.h  IParser.h  IUnpacker.h  Parser.h  Receiver.h  Reciever.h  Sender.h  UartValidator.h  Unpacker.h
libs/Communication/src/: CommunicationFactory.c  EthernetValidator.c  Parser.c  Receiver.c  Reciever.c  Sender.c  UartValidator.c  Unpacker.c
libs/Communication/test/: CMakeLists.txt
libs/scope/test/: CMakeLists.txt  RingBuffer-test.cpp  Scope-test.cpp  channel-test.cpp  ring_buffer-test.cpp  scope-test.cpp  trigger-test.cpp
src/: AddressStorage.c  Channel.c  Scope.c  ScopeBuider.c  ScopeBuilder.c  ScopeRunner.c  Trigger.c  main.c
test/: CMakeLists.txt  Scope-test.cpp  channel-test.cpp  trigger-test.cpp
test/Command/: CommandAddr-test.cpp  CommandFactory-test.cpp  CommandRunning-test.cpp  CommandTrigger-test.cpp
test/Communication/: FramedIO-test.cpp  FramedIOTestFunctions.h
test/Communication/Uart/: UartJson-test.cpp
test/Control/: AnnounceStorage-test.cpp  Stack-test.cpp
test/Core/: channel-test.cpp  trigger-test.cpp
test/GeneralPurpose/: Bytestream-test.cpp  FloatRingBuffer-test.cpp
test/Integration/: CommandIntegration-test.cpp  FullIntegration-test.cpp
test/JsonParser/: JsonPacker-test.cpp  JsonUnpacker-test.cpp
test/MsgpackParser/: MsgpackPacker-test.cpp  MsgpackUnpacker-test.cpp
test/Observer/: ObserverMock.c  ObserverMock.h
test/ScopeMock/: ScopeMock.c  ScopeMock.h
test/Serialisation/JsonParser/: JsonPacker-test.cpp  JsonUnpacker-test.cpp.dep
test/Serialisation/Protobuf/: NanopbPacker-test.cpp  NanopbUnpacker-test.cpp  check_test_vectory.py  generate_test_vectors.py  se_scope_pb2.py
test/cmake/: UnitTestFiles.cmake
test/cmake/gtest/: CMakeLists.txt
tolchains/: ti-c2000.cmake
tools/: cf_running.py  cf_tgr.py  ev_clear.py  ev_trans.py  uart_msgpack_tester.py
(+665 files in other folders)
